--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,41 +1,54 @@
-<div class="jumbotron" id="home-header">
-    <div class="container bg"></div>
-    <div class="container text-center">
-        <h1>Canadian Car Consumption</h1>
+    <header class="business-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1 class="tagline">Last Mile</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+    
+    <!--<div class="container">
+        <div class="row">
+            <div class="jumbotron">
+                </div>
+            </div>    
+    </div>-->
         
+    
+    <!-- Page Content -->
+    <div class="container">
+
+        <hr>
+
+        <div class="row">
+            <div class="col-sm-4">
+                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
+                <h2>Marketing Box #1</h2>
+                <p>These marketing boxes are a great place to put some information. These can contain summaries of what the company does, promotional information, or anything else that is relevant to the company. These will usually be below-the-fold.</p>
+            </div>
+            <div class="col-sm-4">
+                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
+                <h2>Marketing Box #2</h2>
+                <p>The images are set to be circular and responsive. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+            </div>
+            <div class="col-sm-4">
+                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
+                <h2>Marketing Box #3</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Last Mile 2015</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
     </div>
-</div>
-
-<!-- First call to action -->
-<div class="jumbotron vertical-center" id="call-to-action">
-    <div class="container text-center">
-    	<p>An analysis tool for the fuel consumption statistics of Canadian cars. Find out how fuel efficient your car is, and how it affects the environment.</p>
-    	<a class="btn btn-lg btn-primary" ng-href = "#search">Get Started</a>
-	</div>
-</div>
-
-<!-- Website information -->
-<div class="row" id="website-info">
-   <div class="col-sm-12 col-md-6">
-      <div class="row text-center">
-         <img id = "caption-pic" class="img-circle" src="images/gaspic.png">
-      </div>
-      <div class="caption text-center">
-        <h3>What is this website?</h3>
-        <p>Statistics Canada releases
-        <a href="http://open.canada.ca/data/en/dataset/98f1a129-f628-4ce4-b24d-6f16bf24dd64" target="_blank">Canadian Fuel Consumption Ratings</a> 
-        every year, under the
-        <a href="http://open.canada.ca/en/open-government-licence-canada" target="_blank">Open Government Licence - Canada</a>
-        . This website allows you to search for any Canadian car between the years of 1995-2015, and obtain federal regulated fuel consumptions stats.</p>
-      </div>
-   </div>
-   <div class="col-sm-12 col-md-6">
-      <div class="row text-center">
-         <img id = "caption-pic" class="img-circle" src="images/pump.jpg">
-      </div>
-      <div class="caption text-center">
-         <h3>How can this website save you money?</h3>
-         <large>Use the car search tool to compare potential vehicle purchases, and analyze the annual cost of these vehicles based on how far you drive per year and where you drive. If you are a resident of British Colcumbia or Quebec, you can use the tool to calculate your annual carbon tax costs as well.</large>
-      </div>
-  </div>
-</div>
