--- a/public/partials/navbar.html
+++ b/public/partials/navbar.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">Canadian Car Consumption</a>
+                <a class="navbar-brand">Last Mile</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -17,7 +17,7 @@
                     <!-- getClass() sets the nav bar items as active -->
                     <li ng-class = "getClass('/home')"><a ng-href="#home">Home</a></li>
                     <li ng-class = "getClass('/search')"><a ng-href="#search">Search</a></li>
-                    <li ng-class = "getClass('/about')"><a ng-href="#about">About</a></li>
+                    <li ng-class = "getClass('/about')"><a ng-href="#about">About Us</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
