--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,162 +1,6 @@
-p {
-   font-size: 16px;
-}
-#about-row {
-  padding-bottom: 70px;
 
-}
-
-#about {
-  padding-right: 60px;
-  padding-left: 60px;
-  padding-top: 30px;
-}
-
-#search-single {
-  padding-right: 60px;
-  padding-left: 60px;
-}
-
-#searchHeader {
-  min-height: 200px;
-}
-
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
-}
-
-.row {
-  padding-bottom: 20px;
-}
-
-.lol-container {
-  max-width: 250px;
-  max-height: 250px;
-  width: 300px;
-  height: 300px;
-}
-
-#lol {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  padding-top: 50px;
-  /*padding-right: 60px;
-  padding-left: 60px;*/
-  padding-bottom: 10px;
-}
-
-.selected {
-  font-weight: bold;
-}
-
-.container  .img-responsive {
-    display: block;
-    width: auto;
-    max-height: 100%;
-}
-
-.carStats {
-  background-color: #D2D2D2
-}
-
-.resultsContainer {
-  padding: 0px 0 60px 0;
-}
-
-#secondCar {
-  background-color: #D2D2D2
-}
-
-#firstCar {
-  background-color: #FFDCB9;
-  border-right: 1px solid #88776C;
-}
-
-.fill { 
-    min-height: 100%;
-    height: 100%;
-}
-
-.form-inline .form-control {
-  display: block;
-  width: 100%;
-}
-.form-inline .form-group {
-  display: inline-block;
-  margin-bottom: 0;
-  vertical-align: middle;
-}
-.form-inline:before, .form-inline:after {
-  display: table;
-  content: " ";
-}
-.form-inline:after {
-  clear: both;
-}
-.form-inline>[class*='col-']:not(button) {
-  padding-left:0;
-}
-
-.jumbotron {
-    position: relative;
-    z-index: 1;
-    letter-spacing: 1px;
-    text-shadow: 0 0 0.5px rgba(0,0,0,.05),0 0.5px 1px rgba(0,0,0,.3);
-    color: #000;
-    border-bottom: 1px solid #88776C;
-    min-height: 250px;
-    margin-bottom: 0;
-}
-
-#selectedCarImage {
-  height: 512;
-  width: 307;
-}
-
-
-#caption-pic {
-  height: 290;
-  width: 290;
-}
-
-#home-header {
-    min-height: 350px;
-}
-
-.jumbotron .bg {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: url(../images/GreenCar.jpg) bottom center;
-    opacity: .9;
-    width: 100%;
-    height: 100%;
-}
-
-.vertical-center {
-  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 100vh; /* These two lines are counted as one :-)       */
-
-  display: flex;
-  align-items: center;
-}
-
-#call-to-action {
-    min-height: 50px;
-}
-
-#website-info {
-  margin: 0 0 0 0;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-right: 60px;
-  padding-left: 60px;
+/* Adjust left and right margin of containers */
+.container {
+	margin-left: 3em;
+	margin-right: 3em;
 }
