--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,54 +1,76 @@
-    <header class="business-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h1 class="tagline">Last Mile</h1>
-                </div>
-            </div>
-        </div>
-    </header>
-    
-    <!--<div class="container">
-        <div class="row">
-            <div class="jumbotron">
-                </div>
-            </div>    
-    </div>-->
-        
-    
-    <!-- Page Content -->
-    <div class="container">
+<!-- Page Content -->
+<!-- Call-to-action -->
 
-        <hr>
-
-        <div class="row">
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #1</h2>
-                <p>These marketing boxes are a great place to put some information. These can contain summaries of what the company does, promotional information, or anything else that is relevant to the company. These will usually be below-the-fold.</p>
-            </div>
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #2</h2>
-                <p>The images are set to be circular and responsive. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-            </div>
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #3</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Last Mile 2015</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
+<div class="row">
+    <div class="text-center fade-in-b">
+        <img id="logo" class="img-responsive img-center" src="../public/images/clearLogo.png" alt="">
+        <h1>BIG IMPORTANT CALL-TO-ACTION</h1>
+        <h4>Who are we, how can we help you</h4>
     </div>
+</div>
+<div class="container">
+<hr>
+<!-- Trucking Compnaies Information -->
+
+    <div class="row">
+        <div class="callout-dark text-center fade-in-b">
+            
+            <div class="well">
+                <h1>Trucking Companies</h1>
+                <img class="img-responsive img-center" src="../public/images/image8.png" alt="">
+                <h4>Learn how Last Mile can save your delivery company up to 30% in transporation costs to major Canadian cities.</h4>
+                <!-- Collapse section -->
+                <button class="btn btn-info" data-toggle="collapse" data-target="#truckCompany">Learn More</button>
+                <div id="truckCompany" class="collapse">
+                    <h2>The advantage </h2>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <hr>
+    <!-- Independant Driver Information -->
+    <div class="row">
+        <div class="callout-red text-center fade-in-b">
+            <div class="well">
+                <h1>Independant Drivers</h1>
+                <img class="img-responsive img-center" src="../public/images/image5.png" alt="">
+                <h4>Learn how you can earn money with Last Mile as an independant driver</h4>
+                <!-- Collapse section -->
+                <button class="btn btn-danger" data-toggle="collapse" data-target="#independantDrivers">Learn More</button>
+                <div id="independantDrivers" class="collapse">
+                    <h2>The advantage </h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <!-- Business Owner Information -->
+    <div class="row">
+        <div class="callout-blue text-center fade-in-b">
+            
+            <div class="well">
+                <h1>Business Owners</h1>
+                <img class="img-responsive img-center" src="../public/images/image3.png" alt="">
+                <h4>Learn how you can earn money with Last Mile as an independant driver</h4>
+                <!-- Collapse section -->
+                <button class="btn btn-primary" data-toggle="collapse" data-target="#businessOwners">Learn More</button>
+                <div id="businessOwners" class="collapse">
+                    <h2>The advantage </h2>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+<hr>
+<!-- Footer -->
+<footer>
+    <div class="row">
+        <div class="col-lg-12">
+            <p>Copyright &copy; Last Mile 2015</p>
+        </div>
+    </div>
+</footer>
+</div>
+</div>
