--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,118 @@
+#logo {
+    max-width: 500px;
+}
+
+hr {
+    color: #000;
+    background-color: #000;
+}
 
 /* Adjust left and right margin of containers */
-.container {
+.container-fluid {
 	margin-left: 3em;
 	margin-right: 3em;
 }
+
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+
+.background {
+        /* Opaque background with color tint */
+      background: center repeat, 
+    linear-gradient(
+      rgba(238, 238, 238, 0.6), 
+      rgba(238, 238, 238, 0.3)
+    ),
+    url('http://www.hdwallpapers.in/download/empire_state_city-1920x1080.jpg');
+
+    
+}
+.well h1,h2,h3,h4,h5{
+    color: #000;
+}
+
+.call-to-action {
+    padding-top: 0px;
+    padding: 30px;
+    color: #000;
+    background-color: #eee;
+}
+
+.call-to-action h1,
+h2,
+h3,
+h4 {
+    font-weight: 300;
+    line-height: 1.4;
+}
+/* callout-dark */
+.callout-dark {
+    padding: 30px;
+    color: #fff;
+    background-color: #252525;
+}
+
+.callout-dark h1,
+h2,
+h3,
+h4 {
+    font-weight: 300;
+    line-height: 1.4;
+}
+
+.callout-dark p {
+    color: #B1B1B1;
+    font-size: 17px;
+}
+
+.callout-mage {
+    padding: 30px;
+    background-color: #743C58;
+    color: #fff;
+}
+
+.callout-red {
+    padding: 30px;
+    color: #fff;
+    background-color: #FF4C4C;
+}
+
+.callout-red h1,
+h2,
+h3,
+h4 {
+    font-weight: 300;
+    line-height: 1.4;
+}
+
+.callout-blue {
+    padding: 30px;
+    color: #fff;
+    background-color: #004664;
+}
+
+.callout-blue h1,
+h2,
+h3,
+h4 {
+    font-weight: 300;
+    line-height: 1.4;
+}
+
+.callout-block {
+    background-color: #F5F3F4;
+    border-left: 5px solid #a94545;
+    border-right: 5px solid #a94545;
+    padding: 15px;
+}
+
+.callout-block h1,
+.callout-block h2,
+.callout-block h3,
+.callout-block h4 {
+    font-weight: 300;
+    line-height: 1.4;
+}
+
