--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,31 +1,49 @@
 <!-- Page Content -->
 <!-- Call-to-action -->
-
 <div class="row">
     <div class="text-center fade-in-b">
-        <img id="logo" class="img-responsive img-center" src="../public/images/clearLogo.png" alt="">
+        <img id="logo" class="img-responsive img-center" src="../public/images/smallClear.png" alt="">
         <h1>BIG IMPORTANT CALL-TO-ACTION</h1>
         <h4>Who are we, how can we help you</h4>
     </div>
 </div>
 <div class="container">
-<hr>
-<!-- Trucking Compnaies Information -->
-
+    <hr>
+    <!-- Trucking Compnaies Information -->
     <div class="row">
         <div class="callout-dark text-center fade-in-b">
             
             <div class="well">
-                <h1>Trucking Companies</h1>
-                <img class="img-responsive img-center" src="../public/images/image8.png" alt="">
+                <h1>Delivery Companies</h1>
+                <img class=" paragraphPicture img-responsive img-center" src="../public/images/truck-image.png" alt="">
                 <h4>Learn how Last Mile can save your delivery company up to 30% in transporation costs to major Canadian cities.</h4>
+                <br>
                 <!-- Collapse section -->
                 <button class="btn btn-info" data-toggle="collapse" data-target="#truckCompany">Learn More</button>
                 <div id="truckCompany" class="collapse">
-                    <h2>The advantage </h2>
+                    <hr>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            
+                            <img class="img-responsive img-center" src="../public/images/image8.png" alt="">
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <p>The “Last Mile” in logistics refers to the extra costs of the last leg of a delivery, commonly occurring when a vehicle has reached an inner city. <b>These costs could represent up to 30% the costs of shipping</b>, and is an area in which cost savings can be realized for any delivery company.</p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <p>Our company connects your small business customers to our independant drivers, who are willing to complete this last mile of the delivery to these locations, for a discount or in store credit. Your drivers would simply unload their delivery contents at one of our many locations located outside major Canadian cities, and independent drivers would pick up the packages from there and complete your delivery.</p>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <img class=" paragraphPicture img-responsive img-center" src="../public/images/image6.png" alt="">
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
-            
         </div>
     </div>
     <hr>
@@ -34,12 +52,34 @@
         <div class="callout-red text-center fade-in-b">
             <div class="well">
                 <h1>Independant Drivers</h1>
-                <img class="img-responsive img-center" src="../public/images/image5.png" alt="">
+                <img class="paragraphPicture img-responsive img-center" src="../public/images/image4.png" alt="">
                 <h4>Learn how you can earn money with Last Mile as an independant driver</h4>
                 <!-- Collapse section -->
                 <button class="btn btn-danger" data-toggle="collapse" data-target="#independantDrivers">Learn More</button>
+                <br>
                 <div id="independantDrivers" class="collapse">
-                    <h2>The advantage </h2>
+                    <hr>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            
+                            <img class="img-responsive img-center" src="../public/images/image10.png" alt="">
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <br>
+                            <p>Last Mile gives you the opportunity as an independent driver, to complete package deliveries to small businesses located within your city. <b>Completing these deliveries will reward you with in-store credits, and major discounts at this business’s locations.</b></p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <p>Using the Last Mile mobile application, you may view which business locations in your city are awaiting deliveries. Simply pick up the package from one of our many locations in your area, and realize the <b>major savings</b> at your favorite locations by completing the delivery. </p>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <img class="paragraphPicture img-responsive img-center" src="../public/images/image5.png" alt="">
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
@@ -51,26 +91,47 @@
             
             <div class="well">
                 <h1>Business Owners</h1>
-                <img class="img-responsive img-center" src="../public/images/image3.png" alt="">
-                <h4>Learn how you can earn money with Last Mile as an independant driver</h4>
+                <img class="paragraphPicture img-responsive img-center" src="../public/images/store.png" alt="">
+                <h4>Learn how Last Mile can generate more customers for your business, and increase your sales.</h4>
                 <!-- Collapse section -->
                 <button class="btn btn-primary" data-toggle="collapse" data-target="#businessOwners">Learn More</button>
+                <br>
                 <div id="businessOwners" class="collapse">
-                    <h2>The advantage </h2>
+                    <hr>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            
+                            <img class="img-responsive img-center" src="../public/images/image11.png" alt="">
+                            <br>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <p>Last Mile gives you the opportunity to generate customers for your business, by joining the Last Mile network of businesses and retailers. Incoming deliveries are completed by independent drivers using the Last Mile mobile application, rather than commercial delivery companies, and in return these drivers are rewarded with in-store credit at your location.</p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <p>This method allows you to generate INSERT SOME STAT HERE ABOUT HOW IN-STORE CREDIT INCREASES HOW MUCH THEY’LL BUY BY UP TO %%%%. </p>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <img class=" paragraphPicture img-responsive img-center" src="../public/images/image3.png" alt="">
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
             
         </div>
     </div>
-
-<hr>
-<!-- Footer -->
-<footer>
-    <div class="row">
-        <div class="col-lg-12">
-            <p>Copyright &copy; Last Mile 2015</p>
+    <hr>
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Last Mile 2015</p>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </div>
 </div>
