--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -2,9 +2,8 @@
 <!-- Call-to-action -->
 <div class="row">
     <div class="text-center fade-in-b">
-        <img id="logo" class="img-responsive img-center" src="../public/images/smallClear.png" alt="">
-        <h1>BIG IMPORTANT CALL-TO-ACTION</h1>
-        <h4>Who are we, how can we help you</h4>
+        <img id="logo" class="img-responsive img-center" src="/images/smallClear.png" alt="">
+            <h2>No matter who you are, Last Mile can save you money in the world of delivery logistics</h2>
     </div>
 </div>
 <div class="container">
@@ -15,7 +14,8 @@
             
             <div class="well">
                 <h1>Delivery Companies</h1>
-                <img class=" paragraphPicture img-responsive img-center" src="../public/images/truck-image.png" alt="">
+                <hr>
+                <img class=" paragraphPicture img-responsive img-center" src="/images/truck-image.png" alt="">
                 <h4>Learn how Last Mile can save your delivery company up to 30% in transporation costs to major Canadian cities.</h4>
                 <br>
                 <!-- Collapse section -->
@@ -26,7 +26,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
                             
-                            <img class="img-responsive img-center" src="../public/images/image8.png" alt="">
+                            <img class="img-responsive img-center" src="/images/image8.png" alt="">
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <p>The “Last Mile” in logistics refers to the extra costs of the last leg of a delivery, commonly occurring when a vehicle has reached an inner city. <b>These costs could represent up to 30% the costs of shipping</b>, and is an area in which cost savings can be realized for any delivery company.</p>
@@ -38,7 +38,7 @@
                             <p>Our company connects your small business customers to our independant drivers, who are willing to complete this last mile of the delivery to these locations, for a discount or in store credit. Your drivers would simply unload their delivery contents at one of our many locations located outside major Canadian cities, and independent drivers would pick up the packages from there and complete your delivery.</p>
                         </div>
                         <div class="col-md-6 col-sm-12">
-                            <img class=" paragraphPicture img-responsive img-center" src="../public/images/image6.png" alt="">
+                            <img class=" paragraphPicture img-responsive img-center" src="/images/image6.png" alt="">
                         </div>
                         
                     </div>
@@ -52,7 +52,8 @@
         <div class="callout-red text-center fade-in-b">
             <div class="well">
                 <h1>Independant Drivers</h1>
-                <img class="paragraphPicture img-responsive img-center" src="../public/images/image4.png" alt="">
+                <hr>
+                <img class="paragraphPicture img-responsive img-center" src="/images/image4.png" alt="">
                 <h4>Learn how you can earn money with Last Mile as an independant driver</h4>
                 <!-- Collapse section -->
                 <button class="btn btn-danger" data-toggle="collapse" data-target="#independantDrivers">Learn More</button>
@@ -63,7 +64,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
                             
-                            <img class="img-responsive img-center" src="../public/images/image10.png" alt="">
+                            <img class="img-responsive img-center" src="/images/image10.png" alt="">
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <br>
@@ -76,7 +77,7 @@
                             <p>Using the Last Mile mobile application, you may view which business locations in your city are awaiting deliveries. Simply pick up the package from one of our many locations in your area, and realize the <b>major savings</b> at your favorite locations by completing the delivery. </p>
                         </div>
                         <div class="col-md-6 col-sm-12">
-                            <img class="paragraphPicture img-responsive img-center" src="../public/images/image5.png" alt="">
+                            <img class="paragraphPicture img-responsive img-center" src="/images/image5.png" alt="">
                         </div>
                         
                     </div>
@@ -91,7 +92,8 @@
             
             <div class="well">
                 <h1>Business Owners</h1>
-                <img class="paragraphPicture img-responsive img-center" src="../public/images/store.png" alt="">
+                <hr>
+                <img class="paragraphPicture img-responsive img-center" src="/images/store.png" alt="">
                 <h4>Learn how Last Mile can generate more customers for your business, and increase your sales.</h4>
                 <!-- Collapse section -->
                 <button class="btn btn-primary" data-toggle="collapse" data-target="#businessOwners">Learn More</button>
@@ -102,20 +104,20 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
                             
-                            <img class="img-responsive img-center" src="../public/images/image11.png" alt="">
+                            <img class="img-responsive img-center" src="/images/image11.png" alt="">
                             <br>
                         </div>
                         <div class="col-md-6 col-sm-12">
-                            <p>Last Mile gives you the opportunity to generate customers for your business, by joining the Last Mile network of businesses and retailers. Incoming deliveries are completed by independent drivers using the Last Mile mobile application, rather than commercial delivery companies, and in return these drivers are rewarded with in-store credit at your location.</p>
+                            <p>Last Mile gives you the opportunity to generate customers for your business, by joining the Last Mile network of businesses and retailers. Incoming deliveries are completed by independent drivers using the Last Mile mobile application. In return, these drivers are rewarded with in-store credit at your location.</p>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
-                            <p>This method allows you to generate INSERT SOME STAT HERE ABOUT HOW IN-STORE CREDIT INCREASES HOW MUCH THEY’LL BUY BY UP TO %%%%. </p>
+                            <p><b>The use of in-store credit has been proven to increase sales in business retailers</b>. 61% of in-store credit holders spend more than the balance of the credit. Also, 75% of those shoppers who do overspend will spend 60% more of the value of the credit.</p>
                         </div>
                         <div class="col-md-6 col-sm-12">
-                            <img class=" paragraphPicture img-responsive img-center" src="../public/images/image3.png" alt="">
+                            <img class=" paragraphPicture img-responsive img-center" src="/images/image3.png" alt="">
                         </div>
                         
                     </div>
