--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="text-center fade-in-b">
         <img id="logo" class="img-responsive img-center" src="/images/smallClear.png" alt="">
-            <h2>No matter who you are, Last Mile can save you money in the world of delivery logistics</h2>
+            <h3>No matter who you are, Last Mile can save you money in the world of delivery logistics</h3>
     </div>
 </div>
 <div class="container">
@@ -51,7 +51,7 @@
     <div class="row">
         <div class="callout-red text-center fade-in-b">
             <div class="well">
-                <h1>Independant Drivers</h1>
+                <h1>Independent Drivers</h1>
                 <hr>
                 <img class="paragraphPicture img-responsive img-center" src="/images/image4.png" alt="">
                 <h4>Learn how you can earn money with Last Mile as an independant driver</h4>
