--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,7 +3,9 @@
 <div class="row">
     <div class="text-center fade-in-b">
         <img id="logo" class="img-responsive img-center" src="/images/smallClear.png" alt="">
+        <div class="container">
             <h3>No matter who you are, Last Mile can save you money in the world of delivery logistics</h3>
+        </div>
     </div>
 </div>
 <div class="container">
